tests/ui/ferrocene/compiler-arguments/upper_f/upper-f_space-valid-option-twice.rs
// -F can be specified multiple times, repeating the same option is not considered an error.
//
//@ check-fail
//@ compile-flags: -F missing_docs -F overflowing_literals

fn main() {} //~ ERROR

// ferrocene-annotations: um_rustc_F
